fix issue with how to content anchor tags not centering

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <br>
           <iframe class="extra" width="560" height="315" src="https://www.youtube.com/embed/2PEt5RdNHNw" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <a href="https://www.youtube.com/watch?v=2PEt5RdNHNw&t=458s" target="_blank" rel="noopener" class="small-display" aria-label="A video about Role playing games that opens in a new tab">More about role-playing games</a>
+          <p><a href="https://www.youtube.com/watch?v=2PEt5RdNHNw&t=458s" target="_blank" rel="noopener" class="small-display" aria-label="A video about Role playing games that opens in a new tab">More about role-playing games</a></p>
           <br>
           <br>
           <h3 id="how-to-use">Mythic</h3>
@@ -108,7 +108,7 @@
           <br>
           <iframe class="extra" width="560" height="315" src="https://www.youtube.com/embed/rksqvR-9cYI" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <a href="https://www.youtube.com/watch?v=rksqvR-9cYI&t=169s" target="_blank" rel="noopener" class="small-display" aria-label="A video about how to use Mythic in your RPG games that opens in a new tab">More about using Mythic</a>
+          <p><a href="https://www.youtube.com/watch?v=rksqvR-9cYI&t=169s" target="_blank" rel="noopener" class="small-display" aria-label="A video about how to use Mythic in your RPG games that opens in a new tab">More about using Mythic</a></p>
           <br>
           <br>
           <h3 id="rules">How to use Mythic</h3>
@@ -227,7 +227,7 @@
           <br>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/I9ag6U3a8eM" title="YouTube video player" allow="accelerometer; autoplay; 
           clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="extra"></iframe>
-          <a href="https://www.youtube.com/watch?v=I9ag6U3a8eM&list=PLDvunq75UfH_GAUWYcYSGL_vftZG0nzR-" target="_blank" rel="noopener" class="small-display" aria-label="A video of Mythic being used in a real game. opens in a new tab">Mythic full game example!</a>
+          <p><a href="https://www.youtube.com/watch?v=I9ag6U3a8eM&list=PLDvunq75UfH_GAUWYcYSGL_vftZG0nzR-" target="_blank" rel="noopener" class="small-display" aria-label="A video of Mythic being used in a real game. opens in a new tab">Mythic full game example!</a></p>
           <br>
           <br>
           <h3 id="glossary">Glossary</h3>
