add back to top button for how to section

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       <div id="how-to-modal" class="modal">
         <!--Content of modal-->
         <div class="how-to-content">
+          <a href="#toc"><button aria-label="back to top" id="back-to-top"><i class="far fa-arrow-alt-circle-up"></i></button></a>
           <button aria-label="close" id="close-how-to"><i class="far fa-times-circle"></i></button>
-          <h3> Table of Contents</h3>
+          <h3 id="toc"> Table of Contents</h3>
           <br>
           <p><a href="#ttrpg">Role-Playing games</a></p>
           <br>
